# steamdeck-motion-cues

./: .gitignore  README.md  main.py  package.json  plugin.json  pnpm-lock.yaml  tsconfig.json
.claude/: settings.local.json
backend/: CMakeLists.txt  build.sh  main.cpp
scripts/: build.mjs
src/: index.tsx  motionCues.ts
